source-sass/app.scss
/* ... */
.blink {
  animation-name: blink;
  animation-duration: 2s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}

@keyframes blink {
  0% { opacity: 1.0; }
  50% { opacity: 0.0; }
  100% { opacity: 1.0; }
}

@keyframes blinkAlt {
  0% { opacity: 1.0; }
  65% { opacity: 0; }
  100% { opacity: 0; }
}

body {
  background: $dark-blue;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;

  * {
    box-sizing: border-box;
  }
}

h1 {
  position: relative;
  left: -2px;
  font-size: 2.5em;
  font-family: $header-font;
  text-transform: uppercase;
  line-height: 1;
  color: #fff;

  @media #{$medium-up} {
    font-size: 4.25em;
  }

  @media #{$medium-up} {
    font-size: 5.25em;
  }

  // @media screen and (min-width: 1440px) {
  //   font-size: 6em;
  // }

  small {
    display: block;
    margin: 1rem 0 0.75rem;
    font-family: $body-font-family;
    text-transform: none;
    font-size: 1.125rem;
    line-height: 1.3;
    color: #8c949e;

    @media #{$medium-up} {
      font-size: 1.375rem;
    }

    @media #{$large-up} {
      font-size: 1.6125rem;
    }

    strong {
      font-weight: normal;
      color: #fff;
    }

    &.subtitle {
      position: relative;
      left: 5px;
      margin-bottom: 0.25rem;
      font-size: 1rem;
      font-family: $header-font;
      text-transform: uppercase;
      letter-spacing: 6px;
      font-weight: normal;

      @media #{$medium-up} {
        font-size: 1.125rem;
      }

      @media #{$medium-up} {
        font-size: 1.25rem;
      }
    }

    &.subtitle--bottom {
      margin-top: 0.25rem;
    }
  }
}

h2 {
  font-weight: 500;
  font-size: 1.5em;
  line-height: 1.3;

  @media #{$medium-up} {
    font-size: 2.25em;
  }

  @media #{$large-up} {
    font-size: 2.875em;
  }
}

h3 {
  font-weight: 500;
  font-size: 1.35em;
  line-height: 1.3;

  @media #{$medium-up} {
    font-size: 1.875em;
  }

  @media #{$large-up} {
    font-size: 2.275em;
  }
}

p,
li {
  font-size: 1rem;
  line-height: 1.3;
  color: #8c949e;

  @media #{$medium-up} {
    font-size: 1.275rem;
  }

  @media #{$large-up} {
    font-size: 1.375rem;
  }

  strong {
    font-weight: normal;
    color: #fff;
  }
}

h4 {
  color: #8c949e;
}

bold {
  font-weight: 500;
}



section {
  position: relative;
  padding: 1rem 0;

  &:after {
    content: '';
    display: block;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;
    // background: linear-gradient(to bottom, #10161c 10%, rgba(#10161c, 0.8) 30%);
    // background: rgba(#10161c, 0.9);
  }

  * {
    position: relative;
    z-index: 5;
  }

  @media #{$medium-up} {
    min-height: 100%;
    padding: 2.75rem 0;
  }

  @media #{$large-up} {
    padding: 5rem 0;
  }
}

section:not(.hero) {
  position: relative;
  padding: 1.5rem 0 0;

  @media #{$medium-up} {
    padding: 4.5rem 0 0;
  }

  @media #{$large-up} {
    padding: 9rem 0 0;
  }
}


.hero {
  z-index: 1001;
  // min-height: 100%;
  // height: 100%;
  background: url(/media/seismic-waves.svg) center 5% no-repeat, $dark-blue;
  background-size: 1100px 200px;

  @media #{$medium-up} {
    height: 100%;
    background-position: center 7%;
    background-size: 1100px 250px;
  }

  @media #{$large-up} {
    background-position: center 10%;
    background-size: 1100px 300px;
  }

  &:after {
    // TODO:
    display: none;
  }

  h1 {
    margin-top: 10vh;
    margin-bottom: 5vh;
    line-height: 1;
    color: #fff;
    text-shadow: 0 0 15px rgba($dark-blue, 0.75);

    @media #{$medium-up} {
      margin-top: 17vh;
      margin-bottom: 3vh;
    }

    @media #{$large-up} {
      margin-top: 24vh;
    }

    strong {
      font-weight: 400;
    }
  }

  h2 {
    margin-top: 2rem;
    color: #fff;

    @media #{$medium-up} {
      margin-top: 4.5rem;
    }

    @media #{$large-up} {
      margin-top: 7rem;
    }
  }

  h3 {
    color: rgba(255, 255, 255, 0.5);
    font-weight: 300;

    @media #{$medium-up} {
      margin-top: 0.75rem;
    }

    @media #{$large-up} {
      margin-top: 1.5rem;
    }
  }

  p {
    margin-top: 1.25rem;
    margin-bottom: 2.5rem;
    color: #777;

    img {
      display: inline-block;
      opacity: 0.3;
    }
  }
}

.title-logo {
  display: block;
  width: 100px;
  margin: 0 auto;
  text-align: center;

  @media #{$medium-up} {
    width: 140px;
    margin-top: -2rem;
  }

  @media #{$large-up} {
    width: 160px;
    margin-top: -4rem;
  }

  img {
    width: 100%;
    // opacity: 0.5;
  }

  // &:hover {
  //   opacity: 1;
  // }
}

.credit-logo {
  position: absolute;
  width: 150px;
  opacity: 0.25;
}

.credit-logo--left {
  width: 175px;
  top: 3.15rem;
  left: 3rem;
}

.credit-logo--right {
  top: 2.3rem;
  right: 3rem;
}

.js-animate-risk,
.js-animate-earthquake {
  visibility: hidden;

  &.animated {
    visibility: visible;
  }
}

.loading-indicator-location {
  display: none;
  position: absolute;
  bottom: 10px;
  left: 15px;
  margin-bottom: -6px;
  margin-top: 0px;
  background: url(../images/loading.gif) 3px 4px no-repeat;
  background-size: 10px 10px;
  padding-left: 16px;
  opacity: 0.65;
  font-size: 12px;
}

.alert-box--risk {
  display: none;
}

.alert-box {
  margin: 0;
  padding: 2rem;
  background: none;
  border: 2px solid $juicy-blue;

  h2 {
    margin-bottom: 1rem;
    color: $off-white;
  }
}

  .alert-box--safe {

  }

  .alert-box--danger {
    border-color: red;

    h2 {
      color: $juicy-orange;
    }

    p {
      color: #fff;
    }
  }
/* ... */

